Added margin-top to section

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,6 @@
     <!-- Site Icon -->
     <link rel="icon" type="image/png" href="img/logo/logo-dark.png">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
@@ -332,7 +327,7 @@
     <!-- Services Section End -->
     
     <!-- Skills Section -->
-    <section id="skills" data-aos="fade-in" class="skills section">
+    <section id="skills" data-aos="fade-in" class="skills">
         <div class="container">
             <div class="section-title">
                 <span>Skills</span>
@@ -478,7 +473,7 @@
     <!-- /Services Section -->
 
     <!-- Projects Section Begin -->
-    <section id="projects" data-aos="fade-in" class="portfolio mx-5">
+    <section id="projects" data-aos="fade-in" class="portfolio">
         <div class="section-title">
             <span>Projects</span>
             <h2>My achievements?</h2>
