Added description text

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
         <div id="typed-text"></div>
     </div>
     <div id="final-text-container" class="text-center text-white">
-        <p id="final-text"><strong class="welcome">WELCOME</strong> to my 
-            <span class="universe-text">universe!</span>
+        <p id="final-text">
+            <span class="welcome">WELCOME TO MY</span>
+            <strong class="universe-text">universe</strong>
         </p>
         <hr/>
+        <p id="description-text">
+            This is my personal portfolio website, where you can find my projects, skills, and experiences.
+            Feel free to explore and get to know me better.
+        </p>
         <a id="final-button" href="#">
             <button id="cta-button">
                 <img id="rocket" src="img/cursors/rocket-launch.png" alt="">
