Updated toolset spacing

--- a/portfolio.html
+++ b/portfolio.html
@@ -344,7 +344,7 @@
                             </svg>
                             <i class="fa fa-database skills-icon"></i>
                         </div>
-                        <div class="stretched-link">
+                        <div class="stretched-link mt-2">
                             <h3>Databases</h3>
                         </div>
                         <div class="toolbox">
@@ -364,7 +364,7 @@
                             </svg>
                             <i class="fa fa-gears skills-icon"></i>
                         </div>
-                        <div class="stretched-link">
+                        <div class="stretched-link mt-2">
                             <h3>Frameworks &amp; Libraries</h3>
                         </div>
                         <div class="toolbox">
@@ -389,7 +389,7 @@
                             </svg>
                             <i class="fa fa-laptop skills-icon"></i>
                         </div>
-                        <div class="stretched-link">
+                        <div class="stretched-link mt-2">
                             <h3>Development Tools</h3>
                         </div>
                         <div class="toolbox">
@@ -413,7 +413,7 @@
                             </svg>
                             <i class="fa fa-brain skills-icon"></i>
                         </div>
-                        <div class="stretched-link">
+                        <div class="stretched-link mt-2">
                             <h3>AI models</h3>
                         </div>
                         <div class="toolbox">
@@ -435,7 +435,7 @@
                             </svg>
                             <i class="fa fa-brush skills-icon"></i>
                         </div>
-                        <div class="stretched-link">
+                        <div class="stretched-link mt-2">
                             <h3>Design &amp; CMS</h3>
                         </div>
                         <div class="toolbox">
@@ -456,10 +456,11 @@
                             </svg>
                             <i class="fa fa-cube skills-icon"></i>
                         </div>
-                        <div class="stretched-link">
+                        <div class="stretched-link mt-2">
                             <h3>3D &amp Animations</h3>
                         </div>
                         <div class="toolbox">
+                            <div class="tool pure-red">Sketchup</div>
                             <div class="tool pure-red">Three.js</div>
                             <div class="tool pure-red">GSAP</div>
                             <div class="tool pure-red">Theatre.js</div>
