Added text to the index final animation

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </p>
         <hr/>
         <p id="description-text">
-            This is my personal portfolio website, where you can find my projects, skills, and experiences.
-            Feel free to explore and get to know me better.
+            This is my personal portfolio website, where you can find my projects, skills, and experiences. Feel free to explore and
+            get to know me better. Come and reach out to me!
         </p>
         <a id="final-button" href="#">
             <button id="cta-button">
