Updated send message button UI

--- a/portfolio.html
+++ b/portfolio.html
@@ -669,9 +669,8 @@
                                         <textarea id="message" placeholder="Message" required></textarea>
                                         <div class="w-100 d-flex justify-content-end px-2 my-2">
                                             <button type="submit" class="cta">
-                                                <i id="sending-button-text">Send Message</i>
                                                 <span class="second">
-                                                    <svg width="50px" height="20px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                    <svg height="12px" viewBox="0 0 66 42" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
                                                         <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                             <path class="one"
@@ -686,6 +685,7 @@
                                                         </g>
                                                     </svg>
                                                 </span>
+                                                <p class="mb-0">Send Message</p>
                                             </button>
                                         </div>
                                     </form>
