Made amelioration to news animations

--- a/portfolio.html
+++ b/portfolio.html
@@ -121,22 +121,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6" data-aos="fade-left" data-aos-delay="150">
+                <div class="col-lg-6">
                     <div class="about__text">
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="services__item">
+                                <div class="services__item" data-aos="fade-left" data-aos-delay="50">
                                     <div class="services__item__icon news__item__icon">
                                         <i class="fa fa-graduation-cap"></i>
                                     </div>
-                                    <h4 class="news__subtitle">
-                                        <i class="fa fa-chart-line"></i> Always Going Higher And Further
+                                    <h4 class="news__subtitle" data-aos="fade-left" data-aos-delay="100">
+                                        Always Going Higher And Further
                                     </h4>
-                                    <p>January 17, 2025</p>
+                                    <p data-aos="fade-left" data-aos-delay="150">January 17, 2025</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="about__text__desc">
+                        <div class="about__text__desc" data-aos="fade-left" data-aos-delay="150">
                             <p>I have successfully defended my thesis on "Report Writing using Artificial Intelligence" 
                                 and graduated with a Bachelor's degree from the ENI in Fianarantsoa. 
                                 This achievement marks a significant milestone in my academic journey.</p>
@@ -180,7 +180,7 @@
 
                 </div>
 
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                     <h3 class="resume-title">Experiences</h3>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Internships</h4>
