--- a/portfolio.html
+++ b/portfolio.html
@@ -162,51 +162,45 @@
                     <h3 class="resume-title">Profile</h3>
                     <div class="resume-item pb-0">
                         <h4 class="resume-subtitle">RAKOTONARIVO Dylan Mickaël</h4>
-                        <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-                    </div><!-- Edn Resume Item -->
-
+                        <p class="resume-paragraph">A student in software engineering and database management, with experience in web development. 
+                            Possesses skills in various programming languages, frameworks, and AI models.</p>
+                    </div>
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">ENI Fianarantsoa, Madagascar</h4>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-                    </div><!-- Edn Resume Item -->
-
+                        <p class="resume-paragraph">Specializing in Software Engineering and Database Management, having completed the three first years in
+                            the same field of study.</p>
+                    </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">French Expression School "La Pépito"</h4>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-                    </div><!-- Edn Resume Item -->
-
+                        <p class="resume-paragraph">Obtained a Baccalaureate in series D with honors.
+                            Completed secondary education, culminating in a national baccalaureate examination.</p>
+                    </div>
                 </div>
-
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                     <h3 class="resume-title">Experiences</h3>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Internships</h4>
-                        <ul>
-                            <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                            <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                        </ul>
-                    </div><!-- Edn Resume Item -->
-
+                        <p class="resume-paragraph">
+                            Contributed to event management within a space, utilizing HTML, CSS, JavaScript, and Python.
+                            Employed Django and ReactJS frameworks with a MySQL database management system.
+                        </p>
+                    </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Personal Projects</h4>
-                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                        <ul>
-                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                        </ul>
-                    </div><!-- Edn Resume Item -->
-
+                        <p class="resume-paragraph">
+                            Participated in the development of a hospital alert and accident detection system.
+                            Utilized HTML, CSS, JavaScript, Python, ReactJS, Spring Boot, and PostgreSQL.
+                        </p>
+                    </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Compentitions</h4>
-                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                        <ul>
-                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                        </ul>
-                    </div><!-- Edn Resume Item -->
+                        <p class="resume-paragraph">
+                            Participated in an inter-university game jam with the theme "Discovering the future," using Unity.
+                            Contributed to the development of a showcase site for a student association, using HTML, CSS, and
+                                JavaScript.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
