Refactor & reorganize files for better structure and maintainability

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
     <link rel="icon" type="image/png" href="img/logo/logo-dark.png">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" type="text/css">
-    <link rel="stylesheet" href="css/toastify.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="vendors/toastify/toastify.min.css" type="text/css">
+    <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="vendors/slicknav/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="css/portfolio.css" type="text/css">
 </head>
 
 <body>
@@ -736,34 +736,19 @@
     <script src="vendors/fontawesome/js/all.min.js"></script>
     <script src="js/anime.min.js"></script>
     <script src="js/gsap.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/email.min.js"></script>
-    <script src="js/toastify-js.js"></script>
     <script src="js/rellax.js"></script>
     <script src="js/theatre.js"></script>
-    <script src="js/main.js"></script>
+    <script src="vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="vendors/toastify/toastify-js.js"></script>
+    <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="vendors/slicknav/jquery.slicknav.js"></script>
+    <script src="vendors/swiper/swiper-bundle.min.js"></script>
     <script src="vendors/threejs/three.min.js"></script>
     <script src="vendors/vanta/vanta.globe.min.js"></script>
-    <script>
-        VANTA.GLOBE({
-            el: "#hero",
-            backgroundColor: "#000116",
-            color: "#020860",
-            color2: "#000116",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
+    <script src="js/portfolio.js"></script>
     
 </body>
 
