--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/bigbang.css" type="text/css">
+    <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body data-aos="fade-in">
     <div id="preloder">
@@ -81,7 +81,7 @@
     
     <!-- GUI library can be loaded at any point -->
     <script src="vendors/threejs/dat.gui.min.js"></script>
-    <script src="js/bigbang.js"></script>
+    <script src="js/main.js"></script>
     <script>
         function aosInit() {
             AOS.init({
