--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <hr/>
         <p id="description-text">
             This is my personal portfolio website, where you can find my projects, skills, and experiences. Feel free to explore and
-            get to know me better. Come and reach out to me!
+            get to know me better. Come and reach out to me! <img src="img/illustrations/vlogger.gif" width="25" height="25">
         </p>
         <a id="final-button" href="#">
             <button id="cta-button">
