Made more impactful narative text on the resupe section

--- a/portfolio.html
+++ b/portfolio.html
@@ -162,19 +162,22 @@
                     <h3 class="resume-title">Profile</h3>
                     <div class="resume-item pb-0">
                         <h4 class="resume-subtitle">RAKOTONARIVO Dylan Mickaël</h4>
-                        <p class="resume-paragraph">A student in software engineering and database management, with experience in web development. 
-                            Possesses skills in various programming languages, frameworks, and AI models.</p>
+                        <p class="resume-paragraph">A curious mind passionate about creating digital solutions, currently immersed in software engineering.
+                            My journey has involved hands-on web development, honing technical skills with emerging technologies, and web design.
+                        </p>
                     </div>
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">ENI Fianarantsoa, Madagascar</h4>
-                        <p class="resume-paragraph">Specializing in Software Engineering and Database Management, having completed the three first years in
-                            the same field of study.</p>
+                        <p class="resume-paragraph">My studies at ENI Fianarantsoa are an exciting intellectual adventure.
+                            Specializing in Software Engineering and Database Management, there, I'm building solid expertise day by day.
+                        </p>
                     </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">French Expression School "La Pépito"</h4>
-                        <p class="resume-paragraph">Obtained a Baccalaureate in series D with honors.
-                            Completed secondary education, culminating in a national baccalaureate examination.</p>
+                        <p class="resume-paragraph">Graduated with honors from "La Pépito" French Expression School.
+                            This foundational step marked the end of my secondary studies and armed me with particulaly good French language skills.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
@@ -182,23 +185,22 @@
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Internships</h4>
                         <p class="resume-paragraph">
-                            Contributed to event management within a space, utilizing HTML, CSS, JavaScript, and Python.
-                            Employed Django and ReactJS frameworks with a MySQL database management system.
+                            My internships were valuable learning grounds. I contributed to create management systems by developing dynamic web solutions,
+                            applying my knowledge pragmatically to technical challenges, working with robust data systems and AI.
                         </p>
                     </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Personal Projects</h4>
                         <p class="resume-paragraph">
-                            Participated in the development of a hospital alert and accident detection system.
-                            Utilized HTML, CSS, JavaScript, Python, ReactJS, Spring Boot, and PostgreSQL.
+                            Driven by innovation, I've undertaken stimulating personal projects, such as designing a hospital alert and accident detection system.
+                            These initiatives allowed me to explore various development facets, strengthening my ability to turn ideas into impactful solutions.
                         </p>
                     </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Compentitions</h4>
                         <p class="resume-paragraph">
-                            Participated in an inter-university game jam with the theme "Discovering the future," using Unity.
-                            Contributed to the development of a showcase site for a student association, using HTML, CSS, and
-                                JavaScript.
+                            I enjoy challenges and teamwork, evidenced by my participation in an inter-university game jam ("Discovering the Future"), an intense creative experience.
+                            I like applying my skills to a collective project and understanding digital communication.
                         </p>
                     </div>
                 </div>
