Ameliorate readability of the resume section by replacing texts with lists

--- a/portfolio.html
+++ b/portfolio.html
@@ -162,46 +162,54 @@
                     <h3 class="resume-title">Profile</h3>
                     <div class="resume-item pb-0">
                         <h4 class="resume-subtitle">RAKOTONARIVO Dylan Mickaël</h4>
-                        <p class="resume-paragraph">A curious mind passionate about creating digital solutions, currently immersed in software engineering.
-                            My journey has involved hands-on web development, honing technical skills with emerging technologies, and web design.
-                        </p>
+                        <ul class="resume-paragraph">
+                            <li>Passionate digital solutions creator, immersed in software engineering.</li>
+                            <li>Skilled in hands-on web development with emerging technologies.</li>
+                            <li>Experienced in web design, bringing concepts to life.</li>
+                        </ul>
                     </div>
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">ENI Fianarantsoa, Madagascar</h4>
-                        <p class="resume-paragraph">My studies at ENI Fianarantsoa are an exciting intellectual adventure.
-                            Specializing in Software Engineering and Database Management, there, I'm building solid expertise day by day.
-                        </p>
+                        <ul class="resume-paragraph">
+                            <li>Studying Software Engineering & Database Management at ENI Fianarantsoa.</li>
+                            <li>Daily building expertise in robust software solutions.</li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">French Expression School "La Pépito"</h4>
-                        <p class="resume-paragraph">Graduated with honors from "La Pépito" French Expression School.
-                            This foundational step marked the end of my secondary studies and armed me with particulaly good French language skills.
-                        </p>
+                        <ul class="resume-paragraph">
+                            <li>Graduated with honors from 'La Pépito' French School.</li>
+                            <li>Acquired strong French language and communication skills.</li>
+                            <li>Focused on expressive communication in secondary studies.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                     <h3 class="resume-title">Experiences</h3>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Internships</h4>
-                        <p class="resume-paragraph">
-                            My internships were valuable learning grounds. I contributed to create management systems by developing dynamic web solutions,
-                            applying my knowledge pragmatically to technical challenges, working with robust data systems and AI.
-                        </p>
+                        <ul class="resume-paragraph">
+                            <li>Gained valuable experience via enriching internships.</li>
+                            <li>Developed dynamic web solutions for management systems.</li>
+                            <li>Applied knowledge to technical challenges using data systems & AI.</li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Personal Projects</h4>
-                        <p class="resume-paragraph">
-                            Driven by innovation, I've undertaken stimulating personal projects, such as designing a hospital alert and accident detection system.
-                            These initiatives allowed me to explore various development facets, strengthening my ability to turn ideas into impactful solutions.
-                        </p>
+                        <ul class="resume-paragraph">
+                            <li>Innovatively developed projects like a hospital alert system.</li>
+                            <li>Explored diverse development, turning ideas into impactful solutions.</li>
+                            <li>Seeking challenges to expand skills & create meaningful applications.</li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4 class="resume-subtitle">Compentitions</h4>
-                        <p class="resume-paragraph">
-                            I enjoy challenges and teamwork, evidenced by my participation in an inter-university game jam ("Discovering the Future"), an intense creative experience.
-                            I like applying my skills to a collective project and understanding digital communication.
-                        </p>
+                        <ul class="resume-paragraph">
+                            <li>Thrived in collaborative environments, such as Game Jams.</li>
+                            <li>Applied skills to collective projects during intense creative experiences.</li>
+                            <li>Deepened understanding of digital communication & collaborative development.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
