--- a/portfolio.html
+++ b/portfolio.html
@@ -663,8 +663,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="row mt-4">
-                        <div class="col-lg-12 col-md-12">
-                            <div class="card" data-aos="fade-left" data-aos-delay="50">
+                        <div class="col-lg-12 col-md-12" data-aos="fade-left" data-aos-delay="50">
+                            <div class="card">
                                 <div class="contact__form">
                                     <form id="contact-form">
                                         <input id="name" type="text" placeholder="Name" required>
