Enhance portfolio mailing with button disabling and better code structure

--- a/portfolio.html
+++ b/portfolio.html
@@ -672,7 +672,7 @@
                                         <input id="phone" type="tel" placeholder="Phone Number" pattern="[0-9]*"  inputmode="numeric" required>
                                         <textarea id="message" placeholder="Message" required></textarea>
                                         <div class="w-100 d-flex justify-content-end px-2 my-2">
-                                            <button type="submit" class="cta">
+                                            <button id="send-message-button" type="submit" class="cta">
                                                 <span class="second">
                                                     <svg height="12px" viewBox="0 0 66 42" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -689,7 +689,7 @@
                                                         </g>
                                                     </svg>
                                                 </span>
-                                                <p class="mb-0">Send Message</p>
+                                                <p id="sending-button-text" class="mb-0">Send Message</p>
                                             </button>
                                         </div>
                                     </form>
