Refactor CSS and JavaScript for improved loader functionality and styling
- Added a new loader.css file for preloader styles.
- Updated main.css to include structured comments and reorganized styles for better readability.
- Modified portfolio.css to streamline button and text styles.
- Enhanced index.html and portfolio.html to link the new loader.css.
- Implemented preloader functionality in main.js to handle loading animations.
- Updated email sending logic in portfolio.js for better error handling.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="css/loader.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body data-aos="fade-in">
@@ -82,17 +83,5 @@
     <!-- GUI library can be loaded at any point -->
     <script src="vendors/threejs/dat.gui.min.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        function aosInit() {
-            AOS.init({
-                offsetTop: 1,
-                duration: 1200,
-                easing: 'ease-in-out',
-                once: false,
-                mirror: true
-            });
-        }
-        window.addEventListener('load', aosInit);
-    </script>
 </body>
 </html>
