--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="css/loader.css" type="text/css">
     <link rel="stylesheet" href="css/portfolio.css" type="text/css">
 </head>
 
