--- a/portfolio.html
+++ b/portfolio.html
@@ -40,12 +40,12 @@
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
                             <ul id="navigation">
-                                <li class="active"><a href="#hero">Home</a></li>
-                                <li><a href="#resume">Resume</a></li>
-                                <li><a href="#services">services</a></li>
-                                <li><a href="#skills">Skills</a></li>
-                                <li><a href="#projects">Projects</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li class="active"><a class="navlink" href="#hero">Home</a></li>
+                                <li><a class="navlink" href="#resume">Resume</a></li>
+                                <li><a class="navlink" href="#services">services</a></li>
+                                <li><a class="navlink" href="#skills">Skills</a></li>
+                                <li><a class="navlink" href="#projects">Projects</a></li>
+                                <li><a class="navlink" href="#contact">Contact</a></li>
                             </ul>
                         </nav>
                         <div class="header__nav__social">
@@ -78,7 +78,7 @@
                     <div class="row">
                         <div class="col-lg-6 hero__text__container">
                             <div class="hero__text">
-                                <h2 class="mb-3 hello-text">Hello !</h2>
+                                <h2 class="mb-3 hello-text">Hello !!</h2>
                                 <h2 class="rellax presentation-text" data-rellax-speed="1.1">I'm Dylan</h2>
                                 <div class="d-flex typed__container">
                                     <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker" 
@@ -231,21 +231,21 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up" data-aos-delay="300">
                     <div class="team__item set-bg" data-setbg="img/team/team.jpg">
                         <div class="team__item__text">
-                            <p>Fianarant'Slam Event Responsible</p>
+                            <h6>Fianarant'Slam Responsible</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up" data-aos-delay="150">
                     <div class="team__item team__item--third set-bg" data-setbg="img/team/team2.jpg">
                         <div class="team__item__text">
-                            <p>ENI Oratory Art Club President</p>
+                            <h6>ENI Oratory Art Club President</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up">
                     <div class="team__item team__item--four set-bg" data-setbg="img/team/team3.jpg">
                         <div class="team__item__text">
-                            <p>JCI Ivonea Observer</p>
+                            <h6>JCI Ivonea Observer</h6>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                     <div class="team__btn">
                         <a id="btn-download-cv" href="#" class="primary-btn">
                             <i class="fa fa-download icon__button"></i>
-                            Download My Resume
+                            Download Resume
                         </a>
                     </div>
                 </div>
@@ -401,7 +401,7 @@
                             <div class="tool purple">Visual Paradigm</div>
                             <div class="tool purple">VS Code</div>
                             <div class="tool purple">Postman</div>
-                            <div class="tool purple">LLM Studio</div>
+                            <div class="tool purple">LM Studio</div>
                             <div class="tool purple">Git</div>
                             <div class="tool purple">Github</div>
                             <div class="tool purple">Gitlab</div>
