fix: Update site icon link and remove unecessary illustrations from html and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <title>Dylan RAKOTONARIVO - Developer, Designer, Public Speaker</title>
 
     <!-- Site Icon -->
-    <link rel="icon" type="image/png" href="img/logo/logo-dark.png">
+    <link rel="icon" type="image/png" href="img/logo/Logo-dark.png">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" type="text/css">
