--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Dylan RAKOTONARIVO - Developer, Designer, Public Speaker</title>
 
     <!-- Site Icon -->
-    <link rel="icon" type="image/png" href="img/logo/logo-dark.png">
+    <link rel="icon" type="image/png" href="img/logo/Logo-dark.png">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" type="text/css">
@@ -44,7 +44,6 @@
                 <span class="pt-1">Start exploring</span>
             </button>
         </a>
-        <!-- <img data-aos="fade-up" data-aos-delay="50" class="illustration" src="/img/illustrations/arrows/Arrow 07.png" alt=""> -->
     </div>
     <div id="button-container">
         <a href="/portfolio.html">
