feat: implemented smoke-simulation to index fix: removed unecessary illustration for bettre UI

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
     <div class="text-container">
         <div id="typed-text"></div>
     </div>
+    <div>
+        <div class="nav__social">
+            <a href="https://web.facebook.com/dylan.mickael.58">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a href="https://github.com/DylanMickael">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="mailto:mickaelrakotonarivo@gmail.com">
+                <i class="fa fa-envelope-open"></i>
+            </a>
+        </div>
+    </div>
     <div id="final-text-container" class="text-center text-white">
         <p id="final-text">
             <span class="welcome">WELCOME TO MY</span>
@@ -55,6 +71,7 @@
     </div>
     <div id="planet"></div>
     <section id="shooting-star"></section>
+    <canvas class="smoke-canvas"></canvas>
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/gsap.min.js"></script>
@@ -76,6 +93,7 @@
     
     <!-- GUI library can be loaded at any point -->
     <script src="vendors/threejs/dat.gui.min.js"></script>
+    <script src="js/smoke-simulation.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
