fix: Made hero image responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax position-relative"  data-rellax-speed="2">
-                            <img data-aos="fade-right" class="hero__image" src="img/hero/heroBlue.png" alt="">
+                            <img class="hero__image" src="img/hero/heroBlue.png" alt="">
                         </div>
                     </div>
                 </div>
