fix: update social navigation styles and remove unnecessary elements for cleaner UI

--- a/portfolio.html
+++ b/portfolio.html
@@ -209,7 +209,7 @@
                         <ul class="resume-paragraph">
                             <li>Thrived in collaborative environments, such as Game Jams.</li>
                             <li>Applied skills to collective projects during intense creative experiences.</li>
-                            <li>Deepened understanding of digital communication & collaborative development.</li>
+                            <li>Deepened understanding of digital communication.</li>
                         </ul>
                     </div>
                 </div>
