--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Css Styles -->
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
+    <link rel="stylesheet" href="vendors/aurora/aurora.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="css/loader.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -60,6 +61,7 @@
     <script src="js/gsap.min.js"></script>
     <script src="vendors/typed.js/typed.umd.js"></script>
     <script src="vendors/aos/aos.js"></script>
+    <script src="vendors/aurora/aurora.js"></script>
     <script src="vendors/fontawesome/js/all.min.js"></script>
     <script src="vendors/threejs/three.min.js"></script>
     <script src="vendors/threejs/CopyShader.js"></script>
