--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
+    <link rel="stylesheet" href="vendors/scroll-to-top/scroll-to-top.css"></script>
     <link rel="stylesheet" href="css/loader.css" type="text/css">
     <link rel="stylesheet" href="css/portfolio.css" type="text/css">
 </head>
@@ -758,6 +759,7 @@
     <script src="vendors/swiper/swiper-bundle.min.js"></script>
     <script src="vendors/threejs/three.min.js"></script>
     <script src="vendors/vanta/vanta.globe.min.js"></script>
+    <script src="vendors/scroll-to-top/scroll-to-top.js"></script>
     <script src="js/portfolio.js"></script>
     
 </body>
