feat: add RoundedBoxGeometry and initialize Three.js scene with bot assembly

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script src="vendors/threejs/ShaderPass.js"></script>
     <script src="vendors/threejs/RenderPass.js"></script>
     <script src="vendors/threejs/UnrealBloomPass.js"></script>
+    <script src="vendors/threejs/RoundedBoxGeometry.js"></script>
     
     <!-- Controls -->
     <script src="vendors/threejs/OrbitControls.js"></script>
