feat: Added 3D animated Robot -Remove simple THREE.JS robot implementation -Integrate imported 3D model using Google Model Viewer -Update related CSS style

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
         </a>
     </div>
 
+    <model-viewer 
+        title="Model based on https://sketchfab.com/3d-models/robot-playground-59fc99d8dcb146f3a6c16dbbcc4680da"
+        src="models/robot_playground.glb" 
+        interaction-prompt="none"
+        alt=""
+        camera-controls
+        autoplay>
+    </model-viewer>
+
     <section id="shooting-star"></section>
 
     <script src="js/jquery-3.3.1.min.js"></script>
@@ -71,6 +80,7 @@
     <script src="vendors/threejs/RenderPass.js"></script>
     <script src="vendors/threejs/UnrealBloomPass.js"></script>
     <script src="vendors/threejs/RoundedBoxGeometry.js"></script>
+    <script type="module" src="vendors/threejs/model-viewer.min.js"></script>
     
     <!-- Controls -->
     <script src="vendors/threejs/OrbitControls.js"></script>
