--- a/portfolio.html
+++ b/portfolio.html
@@ -380,8 +380,7 @@
                             <div class="tool pink">Express JS</div>
                             <div class="tool pink">React JS</div>
                             <div class="tool pink">Bootstrap</div>
-                            <div class="tool pink">Material UI</div>
-                            <div class="tool pink">Chackra UI</div>
+                            <div class="tool pink">Tailwind</div>
                         </div>
                     </div>
                 </div>
@@ -406,6 +405,7 @@
                             <div class="tool purple">Git</div>
                             <div class="tool purple">Github</div>
                             <div class="tool purple">Gitlab</div>
+                            <div class="tool purple">Docker</div>
                         </div>
                     </div>
                 </div>
@@ -468,7 +468,7 @@
                         <div class="toolbox">
                             <div class="tool pure-red">Sketchup</div>
                             <div class="tool pure-red">Three.js</div>
-                            <div class="tool pure-red">GSAP</div>
+                            <div class="tool pure-red">Motion.js</div>
                             <div class="tool pure-red">Theatre.js</div>
                         </div>
                     </div>
