--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
         <div class="hero__slider owl-carousel">
             <div class="hero__item set-bg">
                 <div class="container">
-                    <div class="row">
+                    <div class="d-lg-flex justify-content-center align-items-center">
                         <div class="col-lg-6 hero__text__container">
                             <div class="hero__text">
                                 <h2 class="mb-3 hello-text">Hello !!</h2>
