--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -114,13 +114,13 @@
                             </div>
 
                             <div class="header__nav__social">
-                                <a href="https://web.facebook.com/dylan.mickael.58">
+                                <a target="_blank" href="https://web.facebook.com/dylan.mickael.58">
                                     <i class="fa-brands fa-square-facebook"></i>
                                 </a>
-                                <a href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282">
+                                <a target="_blank" href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282">
                                     <i class="fa-brands fa-linkedin"></i>
                                 </a>
-                                <a href="mailto:mickaelrakotonarivo@gmail.com">
+                                <a target="_blank" href="mailto:mickaelrakotonarivo@gmail.com">
                                     <i class="fa fa-envelope-open"></i>
                                 </a>
                             </div>
@@ -765,14 +765,14 @@
         <div class="container">
             <div class="col-lg-12 text-center">
                 <div id="footer__nav__social" class="footer__nav__social d-none py-4">
-                    <a href="https://web.facebook.com/dylan.mickael.58" data-aos="zoom-out">
+                    <a target="_blank" href="https://web.facebook.com/dylan.mickael.58" data-aos="zoom-out">
                         <i class="fa-brands fa-square-facebook"></i>
                     </a>
-                    <a href="https://github.com/DylanMickael" data-aos="zoom-out" data-aos-delay="100">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282" data-aos="zoom-out" data-aos-delay="200">
+                    <a target="_blank" href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282" data-aos="zoom-out" data-aos-delay="100">
                         <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a target="_blank" href="mailto:mickaelrakotonarivo@gmail.com" data-aos="zoom-out" data-aos-delay="200">
+                        <i class="fa fa-envelope-open"></i>
                     </a>
                 </div>
             </div>
