fix: update portfolio description text for clarity and conciseness

--- a/en/index.html
+++ b/en/index.html
@@ -35,7 +35,7 @@
         </p>
         <hr/>
         <p id="description-text">
-            This is my professional portfolio website, where you can find my projects, skills, and experiences. Feel free to explore and
+            This is my portfolio website, where you can find my projects, skills, and experiences. Feel free to explore and
             get to know me better. Come and reach out to me! <img src="/assets/img/illustrations/vlogger.gif" width="25" height="25">
         </p>
         <a id="final-button" href="#">
