--- a/fr/index.html
+++ b/fr/index.html
@@ -32,12 +32,12 @@
     </div>
     <div id="final-text-container" class="text-center text-white">
         <p id="final-text">
-            <span class="welcome">CECI EST MON</span>
+            <span class="welcome">DECOUVREZ MON</span>
             <strong class="universe-text">univers</strong>
         </p>
         <hr />
         <p id="description-text">
-            Bienvenue dans mon site portfolio professionnel, où vous trouverez mes projets, compétences et expériences. N'hésitez
+            Ceci est mon site portfolio, où vous trouverez mes projets, mes compétences et mes expériences. N'hésitez
             pas à l'explorer pour mieux me connaître et contactez-moi ! <img src="/assets/img/illustrations/vlogger.gif"
                 width="25" height="25">
         </p>
