fix: Add the 3D model viewer title french traduction

--- a/fr/index.html
+++ b/fr/index.html
@@ -58,8 +58,12 @@
     </div>
 
     <model-viewer
-        title="Model based on https://sketchfab.com/3d-models/robot-playground-59fc99d8dcb146f3a6c16dbbcc4680da"
-        src="/assets/models/robot_playground.glb" interaction-prompt="none" alt="" camera-controls autoplay>
+        title="Model basé sur https://sketchfab.com/3d-models/robot-playground-59fc99d8dcb146f3a6c16dbbcc4680da"
+        src="/assets/models/robot_playground.glb" 
+        interaction-prompt="none" 
+        alt="" 
+        camera-controls 
+        autoplay>
     </model-viewer>
 
     <section id="shooting-star"></section>
