fix: update welcome message text in final text container

--- a/fr/index.html
+++ b/fr/index.html
@@ -30,7 +30,7 @@
     </div>
     <div id="final-text-container" class="text-center text-white">
         <p id="final-text">
-            <span class="welcome">DECOUVREZ MON</span>
+            <span class="welcome">VISITEZ MON</span>
             <strong class="universe-text">univers</strong>
         </p>
         <hr />
